# V8-Rust-Server

./: Cargo.toml  data.db  data.db-shm  data.db-wal
migrations/: 20240905_init.sql  20240906_login.sql
public/: index.html  main.js  style.css
src/: auth.rs  login.rs  main.rs  post_run_js.rs  snippets.rs  users.rs
