[package]
name = "tokio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "macros"] }
fast_image_resize = "4.2.1"
image = "0.25.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"]}
v8 = "0.105.1"
native-tls = "0.2.12"
dotenv = "0.15.0"
bcrypt = "0.15.1"
